# libapclient

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
example/: CMakeLists.txt  README.md  apclient.cpp  commands.cpp  commands.h  console_component.cpp  console_component.h  simple_client.cpp  terminal_client.cpp  tokenizer.h
include/libapclient/: data_package.h  libapclient.h  logger.h  packets.h  simple_client.h  tokenizer.h  tracker.h  utils.h
src/: data_package.cpp  libapclient.cpp  logger.cpp  macos.h  macos.mm  packets.cpp  simple_client.cpp  tokenizer.cpp  tracker.cpp  utils.cpp
test/: CMakeLists.txt  TestDataPackage.cpp  TestPackets.cpp
